modificando cores dos botoes

--- a/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
+++ b/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
@@ -30,9 +30,9 @@
 
         <button value="0" class="button-number">0</button>
         <button class="decimal function btn btn-secondary" value=".">.</button>
-        <button class="all-clear function btn btn-danger btn-sm" value="all-clear">AC</button>
+        <button class="all-clear function btn btn-success btn-sm" value="all-clear">AC</button>
 
-        <button class="equal-sign operator btn btn-dark" value="=">=</button>
+        <button class="equal-sign operator btn btn-warning" value="=">=</button>
     </div>
 </div>
 
