Ajuste na media query

--- a/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
+++ b/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
@@ -10,8 +10,8 @@
         
         <button id="calculator-adic" value="+">+</button>
         <button id="calculator-subt" value="-">-</button>
-        <button id="calculator-mult" value="*" disabled>&times;</button>
-        <button id="calculator-divs" value="/" disabled>&divide;</button>
+        <button id="calculator-mult" value="*">&times;</button>
+        <button id="calculator-divs" value="/">&divide;</button>
 
         @for (int i = 7; i < 10; i++)
         {
@@ -36,5 +36,5 @@
     </div>
 </div>
 
-<img id="bullet" width="100%" height="80%">
+<img id="bullet" width="50%" height="50%">
 <h4 id="bullet-text"></h4>
