--- a/src/Web.Mvc.Site/wwwroot/css/site.css
+++ b/src/Web.Mvc.Site/wwwroot/css/site.css
@@ -45,3 +45,26 @@ button {
     grid-gap: 20px;
     padding: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+    button {
+        height: 100%;
+        font-size: 2rem !important;
+    }
+
+    .calculator {
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        width: 350px;
+    }
+
+    .footer {
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        white-space: nowrap;
+        /* Set the fixed height of the footer here */
+        height: 0px;
+        line-height: 60px; /* Vertically center the text there */
+    }
+}
