--- a/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
+++ b/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
@@ -15,17 +15,17 @@
 
         @for (int i = 7; i < 10; i++)
         {
-            <button type="button" value="@i" class="button-number">@i</button>
+            <button value="@i" class="button-number">@i</button>
         }
 
         @for (int i = 4; i < 7; i++)
         {
-            <button type="button" value="@i" class="button-number">@i</button>
+            <button value="@i" class="button-number">@i</button>
         }
 
         @for (int i = 1; i < 4; i++)
         {
-            <button type="button" value="@i" class="button-number">@i</button>
+            <button value="@i" class="button-number">@i</button>
         }
 
         <button value="0" class="button-number">0</button>
