--- a/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
+++ b/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
@@ -10,8 +10,8 @@
         
         <button id="calculator-adic" value="+">+</button>
         <button id="calculator-subt" value="-">-</button>
-        <button id="calculator-mult" value="*">&times;</button>
-        <button id="calculator-divs" value="/">&divide;</button>
+        <button id="calculator-mult" value="*" disabled>&times;</button>
+        <button id="calculator-divs" value="/" disabled>&divide;</button>
 
         @for (int i = 7; i < 10; i++)
         {
