--- a/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
+++ b/src/Web.Mvc.Site/Views/Calculator/Index.cshtml
@@ -10,8 +10,8 @@
         
         <button id="calculator-adic" value="+">+</button>
         <button id="calculator-subt" value="-">-</button>
-        <button id="calculator-mult" value="*" disabled>&times;</button>
-        <button id="calculator-divs" value="/" disabled>&divide;</button>
+        <button id="calculator-mult" value="*">&times;</button>
+        <button id="calculator-divs" value="/">&divide;</button>
 
         @for (int i = 7; i < 10; i++)
         {
@@ -30,9 +30,9 @@
 
         <button value="0" class="button-number">0</button>
         <button class="decimal function btn btn-secondary" value=".">.</button>
-        <button class="all-clear function btn btn-success btn-sm" value="all-clear">AC</button>
+        <button class="all-clear function btn btn-warning btn-sm" value="all-clear">AC</button>
 
-        <button class="equal-sign operator btn btn-warning" value="=">=</button>
+        <button class="equal-sign operator btn btn-dark" value="=">=</button>
     </div>
 </div>
 
